Possible memory leak in ANV
I have a simple Vulkan program that only creates a Vulkan instance and device and then proceeds to destroy them. When I build it using GCC's -fsanitizer=leak option and run it, it reports a couple of memory leaks originating in ANV.
Note the program uses the first available physical device. Also, to get a meaningful stack trace you might have to disable the dlclose call in Vulkan-Loader so it doesn't lose symbol information. When disabling dlclose, you will probably get additional spurious memory leak reports related to the missing dlclose call. Those can be ignored.
If I use RADV, I get no reported leaks.
Furthermore, if I run other relatively simple Vulkan programs like a single test in VK-GL-CTS (any test using a graphics pipeline will do) and I disable the mesa shader cache, more and bigger memory leaks are reported. Again, you would need to comment out the dlclose call in VK-GL-CTS and build it adding the -fsanitizer=leak option to the linker flags.